[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.105.2",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "metatrader5>=5.0.5735",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot==21.3",
    "sqlmodel>=0.0.38",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.48.0",
    "yfinance>=1.4.1",
]
